--- a/email.html
+++ b/email.html
@@ -5,11 +5,14 @@
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;800&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <title>Family Newsletter</title>
   </head>
   <body>
-    <h1></h1>
+    <h1 style="font-family: 'Raleway', sans-serif;">Family Newsletter</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum nunc aliquet. Facilisi morbi tempus iaculis urna id volutpat lacus. Consectetur a erat nam at lectus urna duis convallis convallis. Sodales neque sodales ut etiam sit. A cras semper auctor neque vitae tempus. Enim facilisis gravida neque convallis a cras. Sem et tortor consequat id porta nibh. Aliquam etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id. Facilisi cras fermentum odio eu. Viverra suspendisse potenti nullam ac tortor vitae purus. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Lectus arcu bibendum at varius vel pharetra vel turpis. Turpis massa tincidunt dui ut ornare.
+
+      Leo duis ut diam quam nulla porttitor massa id. Nunc sed blandit libero volutpat sed. Sit amet consectetur adipiscing elit ut aliquam purus sit. Arcu cursus vitae congue mauris rhoncus aenean vel. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam. Gravida in fermentum et sollicitudin ac orci phasellus egestas. Sed tempus urna et pharetra pharetra massa massa ultricies. Malesuada fames ac turpis egestas. Blandit cursus risus at ultrices mi tempus imperdiet. Mi proin sed libero enim sed. Mauris ultrices eros in cursus turpis massa. Eget est lorem ipsum dolor sit amet. Tincidunt vitae semper quis lectus nulla at volutpat diam ut. Tristique senectus et netus et malesuada fames ac turpis. Convallis a cras semper auctor neque.</p>
 
   </body>
   <style>
@@ -17,6 +20,7 @@
       width: 100%;
       height: 100vh;
       background-image: linear-gradient(to left top, #ebebeb, #e7e8ec, #e1e5ec, #dae3ed, #d1e1ec);
+      font-family: 'Playfair Display', serif;
     }
 
 
